<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="2"
    tools:context="com.example.hanlo.ls05_frameviewexample.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/thank_you" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_weight="1"
            android:text="@string/temperature" />

        <Button
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="1"

            android:text="Hot" />


        <CheckBox
            android:id="@+id/checkBox_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="onCheckboxClicked"
            android:text="@string/milk" />

        <CheckBox
            android:id="@+id/checkBox_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:onClick="onCheckboxClicked"
            android:text="@string/sugar" />

        <CheckBox
            android:id="@+id/checkBox_lemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:onClick="onCheckboxClicked"
            android:text="Lemon" />

</GridLayout>